--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -414,7 +414,7 @@ ul {
  */
 
 html {
-  font-family: Inter var, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
+  font-family: Alegreya, Georgia, Cambria, "Times New Roman", Times, serif; /* 1 */
   line-height: 1.5; /* 2 */
 }
 
@@ -8654,7 +8654,7 @@ video {
 }
 
 .font-sans {
-  font-family: Inter var, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Alegreya, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .font-serif {
@@ -35144,7 +35144,7 @@ video {
   }
 
   .sm\:font-sans {
-    font-family: Inter var, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: Alegreya, Georgia, Cambria, "Times New Roman", Times, serif;
   }
 
   .sm\:font-serif {
@@ -61635,7 +61635,7 @@ video {
   }
 
   .md\:font-sans {
-    font-family: Inter var, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: Alegreya, Georgia, Cambria, "Times New Roman", Times, serif;
   }
 
   .md\:font-serif {
@@ -88126,7 +88126,7 @@ video {
   }
 
   .lg\:font-sans {
-    font-family: Inter var, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: Alegreya, Georgia, Cambria, "Times New Roman", Times, serif;
   }
 
   .lg\:font-serif {
@@ -114617,7 +114617,7 @@ video {
   }
 
   .xl\:font-sans {
-    font-family: Inter var, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: Alegreya, Georgia, Cambria, "Times New Roman", Times, serif;
   }
 
   .xl\:font-serif {
