update book raters and avg when a rating deleted

--- a/backend/book/templates/book/admin/change_list.html
+++ b/backend/book/templates/book/admin/change_list.html
@@ -6,4 +6,7 @@
 <li>
     <a href="{% url 'books:content_based_training' %}" class="changelink">Train</a>
 </li>
+<li>
+    <a href="{% url 'books:refresh_books' %}" class="changelink">Refresh Books</a>
+</li>
 {% endblock %}
